<resources>
    <string name="app_name">My Application</string>
    <string name="I_need_help">I need help</string>
     <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="add">Add</string>
    <string name="add_address">Add address</string>
    <string name="add_address_to_list">Do you want to add this address in your address list ?</string>
      <string name="add_coupon_discount_code">Add coupon / discount code</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="add_destination">Add a destination</string>
    <string name="add_image">Add Image</string>
    <string name="add_items">Add Items</string>
    <string name="add_location">Add Location</string>
    <string name="add_mada_card">Add mada card</string>
    <string name="add_mada_card2">Add Mada Card</string>
    <string name="add_new">Add New</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add_new_card">Add New Card</string>
    <string name="add_note">Add Note</string>
    <string name="add_save">Add</string>
    <string name="add_stc_number_title">Please add your number that registered to stcPay</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_visa_card">Add Visa Card</string>
    <string name="address">Address</string>
    <string name="address_added">25agvt</string>
    <string name="address_name">Name</string>
    <string name="address_name_empty">"Name can't be empty"</string>
    <string name="address_name_restrictions">Name has to be between 3 and 20 characters</string>
    <string name="address_not_supported">Address is not supported , please select another address</string>
    <string name="address_title">Address</string>
    <string name="addresses">Addresses</string>
    <string name="agree">Agree</string>
    <string name="alipay">Alipay</string>
    <string name="all">All Products</string>
    <string name="all_offers_title">All offers</string>
    <string name="all_prices_include_vat">All prices include VAT</string>
    <string name="amex">American Express</string>
    <string name="app_language">App Language</string>
     <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="arabic">العربية</string>
    <string name="area_not_supported">This area is not supported yet</string>
    <string name="asn_bank">ASN Bank</string>
    <string name="assigned">Assigned</string>
    <string name="austria">Österreich</string>
    <string name="auth_failed">Authentication Failure</string>
    <string name="back_to_shopping">Back to Shopping</string>
    <string name="bad_quality">Bad quality</string>
    <string name="badges">Badges</string>
    <string name="badges_description">This is your badges board, collect badges and win rewards</string>
    <string name="balance">Balance</string>
    <string name="balance_compensation">Balance compensation</string>
    <string name="balance_id_hash">Balance id# %d</string>
    <string name="balance_requests">Balance Requests</string>
    <string name="being_checkout">rmn70y</string>
    <string name="belgium">Belgique</string>
    <string name="birthday">Birthday</string>
    <string name="boleto">BOLETO Bancário</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bunq_bank">Bunq Bank</string>
    <string name="call">Call</string>
    <string name="call_permission_needed_for_feature">We need call permission to unlock app features</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_alert">Are you sure want to cancel the order?</string>
    <string name="cancel_order_confirmation">Are you sure you want to cancel this order?</string>
    <string name="cannot_order">"You can't order"</string>
    <string name="cart">Cart</string>
    <string name="cartebleue">Carte Bleue</string>
    <string name="cash">Cash</string>
    <string name="cash_back_value">Cash back value</string>
    <string name="cash_payment">Cash</string>
    <string name="change">Change</string>
    <string name="change_address">Change Address</string>
    <string name="change_location">Change Location</string>
    <string name="change_password">Change Password</string>
    <string name="change_payment_settings">Change Payment Settings</string>
    <string name="changes_will_be_discarded">Changes will be saved, is that okay ?</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chat_with_our_agent">Chat with our agent</string>
    <string name="check_you_connection">Check you connection</string>
    <string name="checkout_auth_confirm_payment">To confirm payment</string>
    <string name="chinaunionpay">UnionPay Online Payment</string>
    <string name="choose">Choose</string>
    <string name="choose_between_services_title">Choose between Haseel Services</string>
    <string name="choose_card_to_pay_bottom_sheet_title">Please select a card to confirm payment or add a new card</string>
    <string name="choose_city_hint">Choose city from here ..</string>
    <string name="choose_delivery_date_title">Choose delivery time</string>
    <string name="choose_supported_area">Choose one of the supported areas</string>
    <string name="city">City</string>
    <string name="close_ad">Close</string>
    <string name="complain">Complain</string>
    <string name="complete_order">Complete Order</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm_payment_through_stc_pay">Confirm payment through STC pay</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="confirmation_code_message">Enter verification code you received to activate your account</string>
    <string name="confirmation_code_title">Confirmation code</string>
    <string name="confirmation_error">Please enter your code</string>
    <string name="connection_time_out">Connected timed out</string>
    <string name="contact_us">Contact us</string>
    <string name="content_description" />
    <string name="continuing_you_accept">By completing the registration, you agree on <u>the terms and conditions</u> of Haseel</string>
    <string name="count_challenges">%d Challenges</string>
    <string name="count_product_added_to_cart">Products have been added to your cart</string>
    <string name="coupon">كوبون</string>
    <string name="coupon_discount_code">Coupon / Discount Code</string>
    <string name="coupon_hint">Enter the discount coupon or code here …</string>
    <string name="create_new_account">Create New Account</string>
    <string name="credit_card">Credit Card</string>
    <string name="credit_card_added">Credit card successfully added</string>
    <string name="currency">SAR</string>
    <string name="current">Current</string>
    <string name="current_balance">Current Balance:</string>
    <string name="current_location">Current Location</string>
    <string name="current_orders_empty">No open requests are currently available</string>
    <string name="customer_service">Customer Service</string>
    <string name="dankort">Dankort</string>
    <string name="date_time_slots_title">Date and time of delivery</string>
    <string name="day">Day</string>
    <string name="define_roundedimageview" />
    <string name="delete">Delete</string>
    <string name="delete_address">Are you sure you want to delete this address?</string>
    <string name="delete_credit_card">Are you sure you want to delete one of credit cards?</string>
    <string name="delete_default_credit_card">"You can't delete the default payment method"</string>
    <string name="delete_item">Do you want to remove this item?</string>
    <string name="delivered">Delivered</string>
    <string name="delivery_currency">SAR</string>
    <string name="delivery_date_and_time">Delivery date and time</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="delivery_of_the_missing_product">Delivery of the missing product</string>
    <string name="delivery_time_title">Delivery time</string>
    <string name="delivery_to">Delivery To</string>
    <string name="determining_location_message">Please wait while we determine your location…</string>
    <string name="did_not_receive_code">Did not receive code ?</string>
    <string name="diners">Diners Club</string>
    <string name="directdebit_sepa">SEPA Direct Debit</string>
    <string name="discount">Discount</string>
    <string name="discover">Discover</string>
    <string name="don_t_have_an_account">"Don't have an account"</string>
    <string name="driver">Driver</string>
    <string name="edit">Edit</string>
    <string name="edit_password">Change Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="email">Email</string>
    <string name="english">English</string>
    <string name="enter_invitation_code">Enter invitation code</string>
    <string name="enter_promo_code">Enter promocode</string>
    <string name="enter_stc_confirmation_code">Enter Stc confirmation code</string>
    <string name="enter_valid_invitation_code">Enter Valid Invitation Code</string>
    <string name="enter_valid_promo_code">Enter Valid Promo Code</string>
    <string name="error_fetching_product_detail">Error in fetching product detail</string>
    <string name="error_general">Unexpected error</string>
    <string name="eta">ETA: %s</string>
    <string name="express_delivery_hours">Hours</string>
    <string name="express_delivery_in">Express delivery in</string>
    <string name="express_delivery_minutes">Minutes</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">2012154572185211</string>
    <string name="faqs">FAQs</string>
    <string name="fb_login_protocol_scheme">fb2012154572185211</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="finish">Finish</string>
    <string name="firebase_database_url">https://haseel-live.firebaseio.com</string>
    <string name="follow_up">Continue</string>
    <string name="for_every_new_one_shopping_with_us">For every new one shopping with us*</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forgot_password_title">Recover the Password</string>
    <string name="free">Free</string>
    <string name="free_delivery">No delivery fees currently applied</string>
    <string name="free_delivery_orders_above">Free Delivery for all orders above</string>
    <string name="free_delivery_title">Free</string>
    <string name="friends_referral_count">You have referred %d friends</string>
    <string name="from_camera">Image From Camera</string>
    <string name="from_gallery">Image From Gallery</string>
    <string name="frubies">frubies</string>
    <string name="frubies_colen">Frubies:</string>
    <string name="fruits_and_veg_title">Fruits and Vegetable</string>
    <string name="full_name">Full name</string>
    <string name="linear_layout_manager">androidx.recyclerview.widget.LinearLayoutManager</string>
    <string name="pay_visa_mada">Pay Visa/Mada Card</string>
    <string name="plus"><u>+</u></string>
    <string name="total_value">Total value :</string>
    <string name="your_shopping_cart">Your shopping cart</string>
</resources>