<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_background">

        <TextView
            android:id="@+id/title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/medium"
            android:text="@string/pay_visa_mada"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/book"
            android:text="@string/choose_card_to_pay_bottom_sheet_title"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/title1"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <com.eaapps.myapplication.MaxHeightRecyclerView
            android:id="@+id/visa_mada_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
            app:layoutManager="@string/linear_layout_manager"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            app:layout_constraintTop_toBottomOf="@+id/title2" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_border_green_corner_8"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_address"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/add_new_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:paddingTop="3dp"
                android:text="@string/add_new_card"
                android:textColor="#ff48b976" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>