<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:menu="@menu/main_lang"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_order"
                android:textColor="@color/black"
                android:fontFamily="@font/medium"
                android:textSize="16sp"
                android:layout_gravity="center"
                />
        </androidx.appcompat.widget.Toolbar>

        <View
            android:id="@+id/line_toolbar"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="#fff2f1f1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/line_toolbar"
            app:layout_constraintBottom_toTopOf="@+id/complete_order"
            android:layout_height="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/delivery_to"
                    layout="@layout/confirm_include_1"
                    title="@{@string/delivery_to}"
                    btnTitle="@{@string/change}"
                    btnVisible="@{true}"
                    line="@{true}"
                    groupVisible="@{true}"
                    imgIcon="@{`ic_package_box_pin_location`}"
                    app:layout_constraintTop_toTopOf="parent" />

                <include
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/payment_method"
                    layout="@layout/confirm_include_1"
                    title="@{@string/text_payment_method}"
                    imgIcon="@{`ic_payment_method`}"
                    groupVisible="@{true}"
                    line="@{false}"
                    app:layout_constraintTop_toBottomOf="@+id/delivery_to"
                    />

                <include android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/method_include"
                    android:id="@+id/payment_methods"
                    app:layout_constraintTop_toBottomOf="@id/payment_method"
                    />

                <include
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/visa_detail"
                    layout="@layout/confirm_include_1"
                    btnTitle="@{@string/change}"
                    imgIcon="@{`ic_visa`}"
                    btnVisible="@{true}"
                    groupVisible="@{false}"
                    line="@{true}"
                    app:layout_constraintTop_toBottomOf="@+id/payment_methods"
                    />

                <include
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/wallet"
                    layout="@layout/confirm_include_1"
                    title="@{@string/wallet_balance}"
                    subTitle="@{`9.0 ر.س`}"
                    switchBtn="@{true}"
                    imgIcon="@{`ic_wallet_balance`}"
                    groupVisible="@{true}"
                    line="@{true}"
                    app:layout_constraintTop_toBottomOf="@+id/visa_detail"
                    />

                <include
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/time_slot"
                    layout="@layout/confirm_include_1"
                    groupVisible="@{true}"
                    subTitle="@{@string/please_select_delivery_time}"
                    title="@{@string/delivery_date_and_time}"
                    arrow="@{true}"
                    imgIcon="@{`ic_payment_time`}"
                    line="@{true}"
                    app:layout_constraintTop_toBottomOf="@+id/wallet"
                    />

                <include
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/coupon"
                    layout="@layout/confirm_include_1"
                    groupVisible="@{true}"
                    title="@{@string/coupon_discount_code}"
                    addBtn="@{true}"
                    imgIcon="@{`ic_coupon`}"
                    app:layout_constraintTop_toBottomOf="@+id/time_slot"
                    />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_checkout_cart"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/coupon"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:fontFamily="@font/book"
                    android:text="@string/your_shopping_cart"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/icon"
                    app:layout_constraintStart_toEndOf="@id/icon"
                    app:layout_constraintTop_toTopOf="@id/icon" />

                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="6dp"
                    android:fontFamily="@font/bold"
                    android:text="@string/total_value"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@id/icon"
                    app:layout_constraintEnd_toStartOf="@+id/currency"
                    app:layout_constraintTop_toTopOf="@id/icon" />

                <TextView
                    android:id="@+id/currency"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/currency"
                    android:textColor="@color/green"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toTopOf="@id/icon"
                    app:layout_constraintBottom_toBottomOf="@id/icon" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/products"
                    app:layout_constraintStart_toStartOf="@id/icon"
                    app:layout_constraintEnd_toEndOf="@id/currency"
                     android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/icon"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/products"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/collapseGroup"
                    app:layout_constraintStart_toStartOf="@+id/products"
                     android:layout_height="wrap_content"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                         android:id="@+id/collapseIcon"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                         android:src="@drawable/ic_collapse_up"
                        app:tint="@color/green"
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="@id/collapseTitle"
                        app:layout_constraintBottom_toBottomOf="@id/collapseTitle"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium"
                        android:text="@string/plus"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintStart_toEndOf="@id/collapseIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:id="@+id/collapseTitle"
                        android:textColor="@color/green"
                        android:textSize="14sp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/complete_order"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="@font/medium"
            android:text="@string/complete_order"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:backgroundTint="#ffe3e3e3"
            app:cornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>